spring boot - configurations rewritten